--- a/stormlight/templates/index.html
+++ b/stormlight/templates/index.html
@@ -5,4 +5,8 @@
   <p>
     <a href="{{ url_for('users.list') }}">[link]</a>
   </p>
+  <h1>Forums</h1>
+  <p>
+    <a href="{{ url_for('forums.list') }}">[link]</a>
+  </p>
 {% endblock %}
