--- a/stormlight/templates/base.html
+++ b/stormlight/templates/base.html
@@ -4,7 +4,7 @@
   {% block head %}
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
-  <title>{% block title %}Stormligth forum{% endblock %}</title>
+  <title>{% block title %}Stormlight forum{% endblock %}</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
