--- a/stormlight/templates/index.html
+++ b/stormlight/templates/index.html
@@ -1,8 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
+  <a href="{{ url_for('users.signup') }}" class="pull-right">Sign Up</a>
+
   <h1>Users</h1>
   <p>
     <a href="{{ url_for('users.list') }}">[link]</a>
+  </p>
+
+  <h1>Groups</h1>
+  <p>
+    <a href="{{ url_for('groups.list') }}">[link]</a>
   </p>
 {% endblock %}
