--- a/stormlight/templates/base.html
+++ b/stormlight/templates/base.html
@@ -12,6 +12,19 @@
 </head>
 <body>
   <div class="container">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        <ul class="flash-messages list-unstyled">
+        {% for category, message in messages %}
+          <li class="alert alert-{{ category|canonize_alert }}">
+            <strong>{{ category }}</strong>
+            {{ message }}
+          </li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+
     {% block content %}{% endblock %}
   </div>
 </body>
