--- a/stormlight/packages/groups/templates/groups_create.html
+++ b/stormlight/packages/groups/templates/groups_create.html
@@ -5,23 +5,11 @@
 <div>
   <form id="signup-form" role="form" method="POST">
     {{ form.csrf_token }}
-    <div class="form-group {% if form.errors.email %} has-error {% endif %}">
-      {{ form.name.label(class='control-label') }}
-      {{ form.name(class='form-control', placeholder=form.name.label.text) }}
-      {% for error in form.errors.name %}
-        <span class="help-block">{{ error }}</span>
-      {% endfor %}
-    </div>
 
-    <div class="form-group {% if form.errors.email %} has-error {% endif %}">
-      {{ form.description.label(class='control-label') }}
-      {{ form.description(class='form-control') }}
-      {% for error in form.errors.description %}
-        <span class="help-block">{{ error }}</span>
-      {% endfor %}
-    </div>
+    {{ f.text_input(form.name, form.errors.name) }}
+    {{ f.text_input(form.description, form.errors.description) }}
 
-    <input type="submit" class="btn btn-default btn-primary" value="Create">
+    {{ f.submit('Create') }}
   </form>
 </div>
 {% endblock %}
