Missing import in forums jinja macros.

--- a/stormlight/packages/forums/templates/_macros.html
+++ b/stormlight/packages/forums/templates/_macros.html
@@ -1,3 +1,5 @@
+{% import 'macros/_forms.html' as f %}
+
 {% macro forum_form(form, update) %}
 <form if="forum-form" role="form" method="POST">
   {{ form.csrf_token }}
